# laborator_ai

./: hello.py  lab 8.py  lab5.py  lab6.py  lab8.py  pyproject.toml
