[project]
name = "laboratori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib-inline>=0.1.7",
    "matplotlib>=3.9.2",
    "pyagrum>=1.17.2",
    "ipython>=8.29.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]
